--- a/CodeCareer.Application/CodeCareer.Application.csproj
+++ b/CodeCareer.Application/CodeCareer.Application.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Posts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
