--- a/CodeCareer.Application/CodeCareer.Application.csproj
+++ b/CodeCareer.Application/CodeCareer.Application.csproj
@@ -11,14 +11,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Appliers\" />
     <Folder Include="ApplierDetails\" />
-    <Folder Include="Recruiters\" />
-    <Folder Include="Posts\" />
+    <Folder Include="Appliers\" />
+    <Folder Include="Posts\Queries\" />
+    <Folder Include="Recruiters\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="8.0.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
 </Project>
