--- a/CodeCareer.Application/CodeCareer.Application.csproj
+++ b/CodeCareer.Application/CodeCareer.Application.csproj
@@ -11,7 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Appliers\" />
     <Folder Include="ApplierDetails\" />
     <Folder Include="Recruiters\" />
     <Folder Include="Posts\" />
@@ -19,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
