--- a/CodeCareer.API/appsettings.json
+++ b/CodeCareer.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
+    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=111111"
   }
 }
