--- a/CodeCareer.API/appsettings.json
+++ b/CodeCareer.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:7143",
+    "Audience": "http://localhost:7143",
+    "SecretKey": "ThisIsBasicReactJsProjectSecretKeyJWT"
   }
 }
