--- a/CodeCareer.API/appsettings.json
+++ b/CodeCareer.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=111111"
+    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
   },
   "JWT": {
     "Issuer": "http://localhost:7143",
