using cloudinary service

--- a/CodeCareer.API/appsettings.json
+++ b/CodeCareer.API/appsettings.json
@@ -1,4 +1,4 @@
-  {
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,12 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
-  },
-  "JWT": {
-    "Issuer": "http://localhost:7143",
-    "Audience": "http://localhost:7143",
-    "SecretKey": "ThisIsBasicReactJsProjectSecretKeyJWT"
+
+  "Cloudinary": {
+    "CloudName": "ddbtkoh4u",
+    "APIKey": "897614226899189",
+    "APISecret": "SGXq0lTXz2UACYOObZKwAi2EY-k"
   }
+
 }
