--- a/CodeCareer.API/appsettings.Development.json
+++ b/CodeCareer.API/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:7143",
+    "Audience": "http://localhost:7143",
+    "SecretKey": "ThisIsBasicReactJsProjectSecretKeyJWT"
   }
 }
