--- a/CodeCareer.Application/CodeCareer.Application.csproj
+++ b/CodeCareer.Application/CodeCareer.Application.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
