--- a/CodeCareer.API/appsettings.json
+++ b/CodeCareer.API/appsettings.json
@@ -1,4 +1,4 @@
-  {
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,11 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
+    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=111111"
   },
   "JWT": {
     "Issuer": "http://localhost:7143",
     "Audience": "http://localhost:7143",
     "SecretKey": "ThisIsBasicReactJsProjectSecretKeyJWT"
+  },
+  "CloudinarySettings": {
+    "CloudName": "your_cloud_name",
+    "ApiKey": "your_api_key",
+    "ApiSecret": "your_api_secret"
   }
+
 }
