--- a/CodeCareer.API/appsettings.json
+++ b/CodeCareer.API/appsettings.json
@@ -6,11 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-
-  "Cloudinary": {
-    "CloudName": "ddbtkoh4u",
-    "APIKey": "897614226899189",
-    "APISecret": "SGXq0lTXz2UACYOObZKwAi2EY-k"
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:7143",
+    "Audience": "http://localhost:7143",
+    "SecretKey": "ThisIsBasicReactJsProjectSecretKeyJWT"
   }
 
 }
