--- a/CodeCareer.API/appsettings.Development.json
+++ b/CodeCareer.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
+    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=111111"
   },
   "JWT": {
     "Issuer": "http://localhost:7143",
