--- a/CodeCareer.API/appsettings.Development.json
+++ b/CodeCareer.API/appsettings.Development.json
@@ -6,11 +6,17 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=111111"
+    "PostgreSQL": "Host=localhost;Port=5432; Database=CodeCareerDB;UserName=postgres ;Password=thai882872"
   },
   "JWT": {
     "Issuer": "http://localhost:7143",
     "Audience": "http://localhost:7143",
     "SecretKey": "ThisIsBasicReactJsProjectSecretKeyJWT"
+  },
+
+  "Cloudinary": {
+    "CloudName": "ddbtkoh4u",
+    "ApiKey": "897614226899189",
+    "ApiSecret": "SGXq0lTXz2UACYOObZKwAi2EY-k"
   }
 }
